# book-architecture-patterns-with-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/application/services/: add.py  allocation.py
src/domain/aggregates/: __init__.py  product.py
src/domain/entities/: batch.py
src/domain/exceptions/: out_of_stock.py
src/domain/interfaces/repositories/: __init__.py  file_system.py  sql_repository.py
src/domain/interfaces/uow/: __init__.py  allocation.py
src/domain/repositories/: repository.py
src/domain/services/: allocate.py  reader.py  sync.py
src/domain/value_objects/: file_system_command.py  file_system_command_action.py  order_line.py
src/infrastructure/: settings.py
src/infrastructure/repositories/: fake_file_system.py  sqlalchemy.py
src/infrastructure/repositories/file_system/: __init__.py  fake_file_system.py
src/infrastructure/repositories/sql_repository/: __init__.py  postgresql.py
src/infrastructure/uow/: __init__.py
src/infrastructure/uow/allocation/: __init__.py  postgresql_allocation.py
src/presentation/dtos/flask/: __init__.py  (+2 more)
src/presentation/utils/: __init__.py  status_codes.py
tests/: conftest.py
tests/domain/entities/: test_batch.py
tests/domain/services/: test_allocate.py  test_sync.py
tests/e2e/: __init__.py
tests/e2e/presentation/: __init__.py
tests/infrastructure/repositories/: test_sqlalchemy.py
tests/integration/: __init__.py
tests/mocks/: __init__.py
tests/mocks/infrastructure/: __init__.py
tests/unit/: __init__.py
tests/utils/: generate_random.py  sql_database_filler.py  to_date.py
(+18 files in other folders)
